NEXT-2154 - Straighten product stream snippets

--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -33,7 +33,7 @@
                    displayName="name"
                    :criteria="typeCriteria"
                    :required="true"
-                   class="has--arrow"
+                   class="field--operator has--arrow"
                    @input="selectType">
         </sw-select>
     {% endblock %}
