--- a/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
+++ b/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
@@ -1,6 +1,6 @@
 {% block sw_text_field_input %}
     <div class="sw-datepicker sw-field__input">
-        <input type="text" @input="onInput" ref="flatpickrInput" :placeholder="currentFlatpickrConfig.dateFormat">
+        <input type="text" @input="onInput" ref="flatpickrInput" :placeholder="currentFlatpickrConfig.dateFormat" v-model="inputValue">
         <sw-field-addition><sw-icon :name="suffixName"></sw-icon></sw-field-addition>
     </div>
 {% endblock %}
