--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -4,55 +4,46 @@
             <sw-container class="sw-order-line-items-grid__actions-container"
                           columns="1fr 1fr"
                           v-show="editable">
-
                 {% block sw_order_line_items_grid_item_actions %}
                     <div>
                         {% block sw_order_line_items_grid_action_delete %}
                             <sw-button @click="onDeleteSelectedItems"
-                                       size="small"
-                                       square
-                                       :disabled="!lineItemActionsEnabled">
+                                class="sw-order-line-items-grid__delete-button"
+                                size="small"
+                                square
+                                :disabled="!lineItemActionsEnabled">
                                 <sw-icon name="small-trash" small></sw-icon>
                             </sw-button>
                         {% endblock %}
-
                     </div>
                 {% endblock %}
-
                 {% block sw_order_line_items_grid_create_actions %}
                     <div align="right">
                         {% block sw_order_line_items_grid_create_actions_button_group %}
                             <sw-button-group :disabled="isLoading">
-
                                 {% block sw_order_line_items_grid_add_existing_product %}
                                     <sw-button variant="ghost"
-                                               size="small"
-                                               @click="onInsertExistingItem">
+                                        size="small"
+                                        @click="onInsertExistingItem">
                                         {{ $tc('sw-order.detailBase.buttonAddProduct')  }}
                                     </sw-button>
                                 {% endblock %}
-
                                 {% block sw_order_line_items_grid_create_actions_dropdown%}
                                     <sw-context-button>
                                         <template slot="button">
-
                                             <sw-button variant="ghost"
                                                        size="small"
                                                        square>
                                                 <sw-icon name="small-arrow-small-down" decorative></sw-icon>
                                             </sw-button>
                                         </template>
-                                        
                                         {% block sw_order_line_items_grid_create_actions_dropdown%}
                                             <sw-context-menu-item @click="onInsertBlankItem">
                                                 {{ $tc('sw-order.detailBase.buttonAddBlankProduct')  }}
                                             </sw-context-menu-item>
                                         {% endblock %}
-
                                     </sw-context-button>
                                 {% endblock %}
-
-
                             </sw-button-group>
                         {% endblock %}
                     </div>
