--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
@@ -1,5 +1,9 @@
 @import "~scss/variables";
 
+$sw-order-line-item-grid-trash:   $color-crimson;
+$sw-order-line-item-border:   $color-steam-cloud;
+
+
 .sw-order-line-items-grid {
     .sw-icon {
         width: 16px;
@@ -10,5 +14,12 @@
 .sw-order-line-items-grid__actions-container
 {
     padding: 24px;
-    border-bottom: 1px solid $color-steam-cloud;
+    border-bottom: 1px solid $sw-order-line-item-border;
+
+    .sw-order-line-items-grid__delete-button {
+        &.sw-button--square:not([disabled]) .sw-icon,
+        &.sw-button--square:not(.sw-button--disabled) .sw-icon {
+            color: $sw-order-line-item-grid-trash;
+        }
+    }
 }
