--- a/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.scss
@@ -9,7 +9,7 @@ $sw-order-user-card-link : $color-shopware-blue;
     padding-bottom: 24px;
   }
 
-  .sw-order-user-card__metadata-user-name {
+  .sw-order-user-card__metadata-user-name,.sw-order-user-card__metadata-price  {
     font-weight: 600;
     font-size: 18px;
     margin-bottom: 8px;
