--- a/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.scss
+++ b/Resources/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.scss
@@ -15,66 +15,53 @@ $sw-colorpicker-font-size: 14px;
 
 .sw-colorpicker {
 
-    .sw-colorpicker__field {
-        border-radius: $sw-colorpicker-border-radius;
-        border: 1px solid $sw-colorpicker-color-border;
-        background: $sw-colorpicker-color-background;
-        display: grid;
-        grid-template-columns: 1fr 48px;
-        margin-bottom: 22px;
-        height: 45px;
-        line-height: 27px;
-        transition: $sw-colorpicker-transition;
-        width: 100%;
-    }
-
-    .sw-colorpicker__label {
-        display: block;
-        line-height: 16px;
-        font-size: 14px;
-        margin-bottom: 8px;
-        color: $sw-colorpicker-color-label;
-        font-weight: normal;
-        user-select: none;
-    }
-
-    .sw-colorpicker__icon {
+    .sw-field__addition .sw-icon.sw-colorpicker__icon {
+        transition: 0.3s color ease-in-out;
+        width: 20px;
+        height: 20px;
         color: $sw-colorpicker-color-text;
-        @include size(20px);
     }
 
     .sw-colorpicker__trigger {
-        border-left: 1px solid $sw-colorpicker-color-border;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         cursor: pointer;
-    }
 
-    .sw-colorpicker__preview {
-        border-radius: 2px;
-        margin: 4px;
-    }
-
-    &.is--open {
-        .sw-colorpicker__field {
-            border-color: $sw-colorpicker-color-focus;
-            color: $sw-colorpicker-color-focus;
-            box-shadow: 0 0 4px lighten($sw-colorpicker-color-focus, 30%);
-            outline: none;
+        &:hover .sw-icon.sw-colorpicker__icon{
+            color: darken($sw-colorpicker-color-text, 20%);
         }
+    }
+
+    .sw-colorpicker__previewWrapper {
+        position: relative;
+        width: 27px;
+        height: 100%;
+    }
+
+    .sw-colorpicker__previewColor, .sw-colorpicker__previewBackground {
+        border-radius: 4px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .sw-colorpicker__previewColor {
+        position: absolute;
+        z-index: 1;
+    }
+    .sw-colorpicker__previewBackground {
+        position: relative;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Crect width='30' height='30' x='00' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='30' y='30' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='60' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='00' y='60' fill='%23cdd5db' /%3E%3C/svg%3E");
+    }
+    .sw-colorpicker__previewBackground--empty::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Cline x1='0' y1='90' x2='90' y2='0' style='stroke:%23DE294C;stroke-width:10' /%3E%3C/svg%3E");
     }
 
     &.is--disabled {
-        .sw-colorpicker__field {
-            background: $color-light-gray;
-            border-color: $color-steam-cloud;
-            color: lighten($sw-colorpicker-color-text, 40%);
-        }
-        .sw-colorpicker__trigger {
-            cursor: default;
-        }
-        .sw-colorpicker__icon {
+        .sw-field__addition .sw-icon.sw-colorpicker__icon {
             color: lighten($sw-colorpicker-color-text, 40%);
         }
     }
@@ -137,6 +124,9 @@ $sw-colorpicker-font-size: 14px;
             border-radius: $sw-colorpicker-border-radius;
             box-shadow: none;
         }
+        .picker_sl {
+            border: 1px solid lighten($color-steam-cloud, 5%);
+        }
         .picker_hue .picker_slider {
             padding: 8px 0;
             margin-top: 4px;
@@ -146,11 +136,17 @@ $sw-colorpicker-font-size: 14px;
             border: 3px solid $color-white;
             box-shadow: 0 0 0 1px $color-steam-cloud;
         }
+        .picker_alpha .picker_selector {
+            padding: 0px 10px;
+            border: 3px solid $color-white;
+            box-shadow: 0 0 0 1px $color-steam-cloud;
+        }
         .picker_sl .picker_selector {
             border: 3px solid $color-white;
             padding: 6px;
         }
         .picker_sample {
+            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 90' width='100%25' height='100%25'%3E%3Crect width='30' height='30' x='00' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='30' y='30' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='00' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='60' y='60' fill='%23cdd5db' /%3E%3Crect width='30' height='30' x='00' y='60' fill='%23cdd5db' /%3E%3C/svg%3E");
             border-radius: $sw-colorpicker-border-radius;
             box-shadow: none;
             overflow: hidden;
