NTR - Fix avatar component showing initials over user image

--- a/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
+++ b/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
@@ -5,7 +5,7 @@
           role="img">
         <slot>
             {% block sw_avatar_slot_imageUrl %}
-                <span v-if="!showPlaceholder" class="sw-avatar__initials">
+                <span v-if="showInitials" class="sw-avatar__initials">
                     {{ avatarInitials }}
                 </span>
             {% endblock %}
