NEXT-1606 - Add default directory for category image uploads

--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -54,6 +54,7 @@
                         :source="mediaItem"
                         :uploadTag="category.id"
                         :allowMultiSelect="false"
+                        :defaultFolder="getCategoryEntity()"
                         @sw-media-upload-open-sidebar="openMediaSidebar"
                         @sw-media-upload-remove-image="removeMediaItem">
                     </sw-media-upload>
