--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.scss
@@ -11,6 +11,10 @@
         padding: 30px;
     }
 
+    .sw-empty-state {
+        position: relative;
+    }
+
     .sw-category-view__multi-delete {
         z-index: 5;
         position: absolute;
