NEXT-2302 - Attribute module fixes

--- a/Resources/administration/src/app/component/form/sw-text-field/sw-text-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-field/sw-text-field.html.twig
@@ -34,7 +34,7 @@
 
                     {% block sw_tooltip %}
                         <sw-help-text
-                                v-if="tooltipText"
+                                v-if="getInlineSnippet(tooltipText)"
                                 :text="getInlineSnippet(tooltipText)"
                                 :tooltipPosition="tooltipPosition">
                         </sw-help-text>
