--- a/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-type-select/sw-attribute-type-select.html.twig
+++ b/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-type-select/sw-attribute-type-select.html.twig
@@ -56,7 +56,7 @@
     {% endblock %}
 
     {% block sw_attribute_type_select_add_option %}
-        <sw-button @click="onClickAddOption">
+        <sw-button @click="onClickAddOption" size="small" class="sw-attribute-type-select__button-add">
             {{ $tc('sw-settings-attribute.attribute.detail.buttonAddOption') }}
         </sw-button>
     {% endblock %}
