--- a/Resources/administration/src/app/component/form/sw-boolean-field/sw-boolean-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-boolean-field/sw-boolean-field.html.twig
@@ -1,3 +1,4 @@
+{% block sw_text_field_label %}{% endblock %}
 {% block sw_text_field_input %}
     <div class="sw-field__input">
         {% block sw_boolean_field_input %}
@@ -20,6 +21,14 @@
             <label v-if="getInlineSnippet(label)" :for="id">
                 <slot name="label">{{ getInlineSnippet(label) }}</slot>
             </label>
+        {% endblock %}
+
+        {% block sw_tooltip %}
+            <sw-help-text
+                    v-if="getInlineSnippet(tooltipText)"
+                    :text="getInlineSnippet(tooltipText)"
+                    :tooltipPosition="tooltipPosition">
+            </sw-help-text>
         {% endblock %}
     </div>
 {% endblock %}
