--- a/Resources/administration/src/app/component/form/sw-field/sw-field.scss
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.scss
@@ -104,9 +104,7 @@ $sw-field-color-error: $color-crimson;
     }
 
     &.sw-field--boolean {
-        > label {
-            visibility: hidden;
-        }
+		margin: 24px auto 22px auto;
 
         .sw-field__switch {
             display: inline-block;
