--- a/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-list/sw-attribute-list.scss
+++ b/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-list/sw-attribute-list.scss
@@ -6,7 +6,6 @@ $sw-attribute-list-color-toolbar-bottom: $color-steam-cloud;
 $sw-attribute-list-color-border: $color-crimson;
 $sw-attribute-list-color-label-link: $color-shopware-blue;
 
-
 .sw-attribute-list {
 	height: 865px;
 
@@ -27,7 +26,7 @@ $sw-attribute-list-color-label-link: $color-shopware-blue;
 		background-color: $sw-attribute-list-color-toolbar-background;
 		border-bottom: 1px solid $sw-attribute-list-color-toolbar-bottom;
 
-		.sw-attribute-list__delete-button {
+		.sw-attribute-list__delete-button.sw-button--square {
 			border-color: $sw-attribute-list-color-border;
 
 			.sw-icon {
@@ -54,5 +53,9 @@ $sw-attribute-list-color-label-link: $color-shopware-blue;
 			color: $sw-attribute-list-color-label-link;
 			text-decoration: underline;
 		}
+	}
+
+	.sw-simple-search-field {
+		margin: unset;
 	}
 }
