--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -158,7 +158,8 @@
                                               :label="$tc('sw-settings-language.detail.labelDefault')"
                                               v-model="language.active">
                                     </sw-field>
-                                    <sw-help-text :text="$tc('sw-settings-language.detail.helpTextDefaultField')"></sw-help-text>
+                                    <sw-help-text :text="$tc('sw-settings-language.detail.helpTextDefaultField')">
+                                    </sw-help-text>
                                 </div>
                             {% endblock %}
                         </sw-container>
