--- a/Resources/administration/src/app/component/base/sw-alert/sw-alert.html.twig
+++ b/Resources/administration/src/app/component/base/sw-alert/sw-alert.html.twig
@@ -2,12 +2,14 @@
     <div class="sw-alert" :class="alertClasses" role="alert">
         {% block sw_alert_inner %}
             {% block sw_alert_icon %}
-                <sw-icon v-if="showIcon"
-                         size="20px"
-                         class="sw-alert__icon"
-                         :name="alertIcon"
-                         decorative>
-                </sw-icon>
+                <slot name="customIcon">
+                    <sw-icon v-if="showIcon"
+                             size="20px"
+                             class="sw-alert__icon"
+                             :name="alertIcon"
+                             decorative>
+                    </sw-icon>
+                </slot>
             {% endblock %}
 
             {% block sw_alert_title %}
