--- a/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.scss
@@ -17,6 +17,12 @@ $sw-order-state-card-success: $color-emerald;
       font-size: 12px;
     }
 
+    .sw-order-state-card__text{
+      padding: 0 4px 4px 4px;
+      position: absolute;
+      line-height: 22px;
+    }
+
     .sw-order-state__neutral-icon-bg{
       background: lighten($sw-order-state-card-neutral,40%);
     }
