--- a/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -152,8 +152,10 @@
                                         <dd class="sw-order-base__label-sales-channel">{{ currentOrder.salesChannel.meta.viewData.name }}</dd>
                                     {% endblock %}
                                     {% block sw_order_detail_base_secondary_info_payment %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelPaymentMethod') }}</dt>
-                                        <dd>{{ currentOrder.paymentMethod.meta.viewData.name }}</dd>
+                                        <template v-if="currentOrder.transactions.length > 0">
+                                            <dt>{{ $tc('sw-order.detailBase.labelPaymentMethod') }}</dt>
+                                            <dd>{{ currentOrder.transactions[0].paymentMethod.meta.viewData.name}}</dd>
+                                        </template>
                                     {% endblock %}
                                     {% block sw_order_detail_base_secondary_info_delivery %}
                                         <dt>{{ $tc('sw-order.detailBase.labelShippingMethod') }}</dt>
